--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <form id="form-name">
             <input type="text" id="nome-beneficiario" required placeholder="Nome completo do beneficiário" />
             <input type="number" id="num-conta" required placeholder="Número da conta" />
-            <input type="number" id="valor-deposito" placeholder="Valor" />
-            <textarea placeholder="Descrição (opcional)"></textarea>
-            <button type="submit">Depositar</button>
+            <input type="number" id="valor-deposito" required placeholder="Valor" />
+            <textarea id ='descricao' placeholder="Descrição (opcional)"></textarea>
+            <button id="botao" type="submit">Depositar</button>
         </form>
     </div>
     <script src="script.js"></script>
