--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
         <h2>Depósitos</h2>
         <form id="form-name">
             <input type="text" id="nome-beneficiario" required placeholder="Nome completo do beneficiário" />
+            <p class="error-mensage">
+                Insira o nome completo.
+            </p>
             <input type="number" id="num-conta" required placeholder="Número da conta" />
             <input type="number" id="valor-deposito" required placeholder="Valor" />
             <textarea id ='descricao' placeholder="Descrição (opcional)"></textarea>
             <button id="botao" type="submit">Depositar</button>
         </form>
+        <p class="success-mensage">
+           
+        </p>
     </div>
     <script src="script.js"></script>
 </body>
